# CapBotSim

./: .gitignore  .gitlab-ci.yml  .rubocop.yml  Gemfile  LICENSE.txt  README.md  capbot-stats  experiment-info  experiment-plotter  main.rb
ansible/: deploy.yaml  inventory.ini  pull_experiments.yaml  pull_logs.yaml
configurations/: biased_stroll.json  pso.json  random_stroll.json
configurations/maps/: anti_biased.json  anti_pf.json  anti_random.json  maze.json  test_map.json
lib/: constants.rb  util.rb
lib/experiment/: experimenter.rb
lib/graphics/: graphics_manager.rb  line.rb  object.rb
lib/kd_tree/: kdtree.rb  node.rb
lib/logger/: csv_logger.rb  experiment_logger.rb  logger.rb
lib/physics/: collision_manager.rb  vector.rb  velocity.rb
lib/physics/shape/: bounding_box.rb  image.rb  rectangle.rb  shape.rb
lib/replay/: replay_config.rb  replay_object.rb  replayer.rb
lib/simulation/: cap_bot_simulation.rb  simulation_config.rb  tick_counter.rb
lib/simulation/object/: object.rb  object_manager.rb
lib/simulation/object/bot/: bot.rb
lib/simulation/object/bot/capabilities/: compass.rb  wheel_encoder.rb
lib/simulation/object/bot/communication/: communication.rb  communication_manager.rb
lib/simulation/object/bot/path/: collision_mapping.rb  navigation_iterator.rb  path.rb
lib/simulation/object/data/: data.rb
lib/simulation/object/obstacle/: obstacle.rb  station.rb  target_station.rb
spec/: path_spec.rb
stats/: Cargo.toml  build.rs  histogram.py  histogram_aba.py  scatter.py
stats/src/: experiment-info.rs  experiment-plotter.rs  main.rs
(+19 files in other folders)
