[package]
name = "capbot-stats"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
csv = "1.3.1"
gnuplot = "0.0.45"
prettytable = "0.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.139"

[[bin]]
name = "capbot-stats"
path = "src/main.rs"
required-features = []

[[bin]]
name = "experiment-info"
path = "src/experiment-info.rs"
required-features = []

[[bin]]
name = "experiment-plotter"
path = "src/experiment-plotter.rs"
required-features = []
